infra/homelab/apps/command-center/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: command-center
  namespace: command-center
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: cmd.ininicho.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: command-center
                port:
                  number: 5000
